<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activityViewModel"
            type="com.udacity.shoestore.ActivityViewModel" />
    </data>
    <!--
    Position the title and the scrollView relative to each
    other and their parent
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.shoestore.shoes.details.ShoeDetailsFragment">

        <TextView
            android:id="@+id/details_title"
            style="@style/general_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- The container for our form fields-->
        <ScrollView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <!-- Vertical linear layout to hold the fields-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />

                <EditText
                    android:id="@+id/shoe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@{activityViewModel.randomShoe.name}"
                    android:inputType="textPersonName"
                    android:hint="@string/name_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Company" />

                <EditText
                    android:id="@+id/shoe_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@{activityViewModel.randomShoe.company}"
                    android:inputType="textPersonName"
                    android:hint="@string/company_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Shoe Size" />

                <EditText
                    android:id="@+id/shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@{String.valueOf(activityViewModel.randomShoe.size)}"
                    android:hint="@string/size_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description" />

                <EditText
                    android:id="@+id/shoe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@{activityViewModel.randomShoe.description}"
                    android:inputType="textPersonName"
                    android:hint="@string/description_hint" />
                <!-- Horizontal layout to organize the buttons -->
                <LinearLayout
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="@dimen/fragment_vertical_margin"
                            android:paddingEnd="@dimen/fragment_vertical_margin"
                            android:text="@string/save_shoe"
                            android:background="@color/colorAccent"
                            android:textColor="@color/white"
                            android:fontFamily="@font/nunito_sans_bold" />
                        <Button
                            android:layout_marginStart="32dp"
                            android:id="@+id/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="@dimen/fragment_vertical_margin"
                            android:paddingEnd="@dimen/fragment_vertical_margin"
                            android:text="Cancel"
                            android:background="@color/gray"
                            android:textColor="@color/asphalt"
                            android:fontFamily="@font/nunito_sans_bold" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>