<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- To allow the users to scroll on smaller screens -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.udacity.shoestore.onboarding.OnboardingFragment">

        <!--
        ConstraintLayout is the perfect layout here:
            1. We have elements that we want to place relative to each other and their parent.
            2. We want flexibility
        -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/onboarding_text"
                style="@style/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/onboarding_text"
                app:layout_constraintBottom_toTopOf="@+id/onboarding_exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/onboarding_title"
                app:layout_constraintVertical_bias="0.128" />

            <Button
                android:id="@+id/onboarding_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:background="@color/colorAccent"
                android:paddingStart="@dimen/fragment_vertical_margin"
                android:paddingEnd="@dimen/fragment_vertical_margin"
                android:text="@string/onboarding_exit"
                android:fontFamily="@font/nunito_sans_bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/onboarding_title"
                style="@style/general_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/onboarding_title"
                app:layout_constraintBottom_toTopOf="@+id/onboarding_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>